--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,14 @@
 * {
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Open Sans;
 }
 
-/* header styles */
+/*header styles started*/
 .header {
     background-image: url("/images/banner/banner3.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
 }
 
 .banner {
@@ -17,7 +16,10 @@
     padding: 300px 150px;
     color: white;
     position: right;
+}
 
+.banner-content {
+    align-items: center;
 }
 
 .banner-title {
@@ -40,13 +42,15 @@
     color: #005FAC;
 }
 
-.banner-content {
-    align-items: center;
-}
+/* header styles end */
 
-/* banner section end */
 
-/* main section started */
+
+/* main styles started */
+
+
+/* failures section styles */
+
 .failures {
     display: flex;
     justify-content: center;
@@ -62,9 +66,13 @@
 .my-failures {
     width: 50%;
     padding: 15px;
+    padding-top: 100px;
+    font-weight: 700;
+    font-size: 40px;
 }
 
 .failures-title {
+    margin-left: 40px;
     font-weight: 700;
     font-size: 40px;
     color: #151414;
@@ -72,6 +80,7 @@
 }
 
 .failures-description {
+    margin-left: 40px;
     font-weight: 400;
     font-size: 16px;
     color: #444343;
@@ -83,8 +92,12 @@
     font-weight: 400;
     font-size: 16px;
     color: #444343;
+    list-style: none;
+
 }
 
+
+/* plan section styles */
 .plan-header {
     text-align: center;
     font-weight: 700;
@@ -97,26 +110,174 @@
     display: flex;
     justify-content: space-evenly;
     margin: 0 100px;
-
-    
 }
-.skills{
+
+.skills {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 130px;
 }
+
 .skills-container h4 {
     font-weight: 700;
     font-size: 30px;
     color: #151414;
 }
 
-.call-now-container{
-    background:linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url("/images/watch.png");
+.skills h4 {
+    font-weight: 700;
+    font-size: 30px;
+    color: #151414;
+    margin-top: 10px;
+}
+
+.skills p {
+    color: #737272;
+    font-weight: 500;
+    font-size: 25px;
+    margin-top: 15px;
+}
+
+/* call now section styles */
+
+.call-now-container {
+    background: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url("/images/watch.png");
     background-size: cover;
-    padding: 59px 64px ;
+    padding: 59px 64px;
     background-repeat: no-repeat;
     margin-bottom: 130px;
     margin: 0 170px 130px 170px;
+}
+
+.call-header {
+    font-weight: 700;
+    font-size: 40px;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+}
+
+.call-now-btn {
+    padding: 20px 35px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #005FAC;
+    border: none;
+    border-radius: 5px;
+}
+
+/* custom styles */
+.social-section {
+    /* background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgba(255, 0, 0, 1)), url('/images/icons/soundcloud.png'); */
+    background-image:  linear-gradient(60deg, #005FAC 0%, rgba(0, 95, 172, 0) 30%), url('/images/icons/soundcloud.png');
+    height: 400px;
+    background-size: cover;
+    padding 50px 100px;
+    background-repeat: no-repeat;
+    margin: 50px 170px;
+    border-radius: 8px;
+    margin-bottom: 130px;
 
 }
+
+.social-container {
+    padding: 150px 200px;
+}
+
+.my-soundcloud {
+    display: block;
+    text-align: center;
+
+
+
+
+}
+
+.social-header {
+    font-weight: 700;
+    font-size: 40px;
+    color: #1d0e69;
+}
+
+.social-sub-header {
+    font-weight: 400;
+    font-size: 20px;
+    color: #1e091d;
+    margin-bottom: 10px;
+}
+
+.social-visit-btn {
+    padding: 20px 35px;
+    border: none;
+    border-radius: 8px;
+    color: yellow;
+    background: #ac0059;
+
+}
+
+/* main styles ended */
+
+/* footer styles started */
+
+/* contact styles */
+.footer-section {
+    background-color: #151414;
+    color: #FFFFFF;
+    padding: 100px 300px;
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+}
+
+.contact-title {
+    font-weight: 700;
+    font-size: 45px;
+    color: #F8F8F8;
+}
+
+.contact-description {
+    margin-top: 16px;
+    margin-bottom: 24px;
+    font-weight: 400;
+    font-size: 16px;
+
+}
+
+.contact-email {
+    margin-top: 25px;
+    margin-bottom: 16px;
+}
+
+.contact-phone {
+    margin-bottom: 35px;
+}
+
+.future a {
+    text-decoration: none;
+    margin: 5px 5px 5px 0;
+}
+
+.subscribe {
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 30px;
+}
+
+.email-form {
+    border: 2px solid #F8F8F8;
+    padding: 15px 50px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    background-color: #151414;
+}
+
+.subscribe-btn {
+    font-weight: 600;
+    font-size: 20px;
+    color: #FFFFFF;
+    padding: 20px 35px;
+    background: #005FAC;
+    border-radius: 8px;
+}
+
+/* styles ended here */
