--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 
 /*header styles started*/
 .header {
-    background-image: url("/images/banner/banner3.png");
+    background-image: url("../images/banner/banner3.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -141,7 +141,7 @@
 /* call now section styles */
 
 .call-now-container {
-    background: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url("/images/watch.png");
+    background: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url("../images/watch.png");
     background-size: cover;
     padding: 59px 64px;
     background-repeat: no-repeat;
@@ -168,7 +168,7 @@
 /* custom styles */
 
 .social-section {
-    background-image: linear-gradient(60deg, #005FAC 0%, rgba(0, 95, 172, 0) 30%), url('/images/icons/soundcloud.png');
+    background-image: linear-gradient(60deg, #005FAC 0%, rgba(0, 95, 172, 0) 30%), url('../images/icons/soundcloud.png');
     height: 400px;
     background-size: cover;
     padding 50px 100px;
