--- a/styles/main.css
+++ b/styles/main.css
@@ -168,7 +168,7 @@
 /* custom styles */
 
 .social-section {
-    background-image: linear-gradient(60deg, #005FAC 0%, rgba(0, 95, 172, 0) 30%), url('../images/icons/soundcloud.png');
+    background-image: linear-gradient(60deg, #005FAC 0%, rgba(0, 95, 172, 0) 30%), url("../images/icons/soundcloud.png");
     height: 400px;
     background-size: cover;
     padding 50px 100px;
