--- a/styles/main.css
+++ b/styles/main.css
@@ -171,7 +171,7 @@
     background-image: linear-gradient(60deg, #005FAC 0%, rgba(0, 95, 172, 0) 30%), url("../images/icons/soundcloud.png");
     height: 400px;
     background-size: cover;
-    padding 50px 100px;
+    padding: 50px 100px;
     background-repeat: no-repeat;
     margin: 50px 170px;
     border-radius: 8px;
